Fix Github button overflow due to invisible, wide file input

--- a/styles.less
+++ b/styles.less
@@ -81,6 +81,7 @@ button, .button, input[type='button'], a {
     .json-file {
         input[type='file'] {
             visibility: hidden;
+            width: 0;
         }
     }
 
